# astrbot_plugin_impact

./: .gitignore  README.md  _conf_schema.json  avatar_gif_do.py  avatar_gif_lash.py  draw_img.py  impact_config.py  impact_media.py  impact_models.py  impact_service.py  impact_store.py  main.py  metadata.yaml  pyproject.toml  txt2img.py
avatar_gif/: README.md  __init__.py  common.py  do.py  lash.py  renderer.py
avatar_gif/templates/: do.json
avatar_gif_templates/: README.md  __init__.py
avatar_gif_templates/templates/: lash.json
resource/: README.md
